--- a/policies/pom.xml
+++ b/policies/pom.xml
@@ -31,6 +31,16 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+				<cloudHubDeployment>
+						<username>manjumuthyala4</username>
+						<environment>Sandbox</environment>
+						<workers>1</workers>
+						<workerType>Micro</workerType>
+						<applicationName>policies123</applicationName>
+						<password>anANya429</password>
+						<muleVersion>4.3.0</muleVersion>
+						<objectStoreV2>true</objectStoreV2>
+					</cloudHubDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -50,6 +60,7 @@
             <classifier>mule-plugin</classifier>
         </dependency>
 	</dependencies>
+	
 
 	<repositories>
           <repository>
