--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -37,7 +37,7 @@
 						<environment>Sandbox</environment>
 						<workers>1</workers>
 						<workerType>Micro</workerType>
-						<applicationName>helloworld</applicationName>
+						<applicationName>helloworld123</applicationName>
 						<password>anANya429</password>
 						<muleVersion>4.3.0</muleVersion>
 						<objectStoreV2>true</objectStoreV2>
